--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -27,7 +27,7 @@ jobs:
         run: pnpm build
 
       - name: Lighthouse CI Action
-        uses: treosh/lighthouse-ci-action@v12
+        uses: treosh/lighthouse-ci-action@fcd65974f7c4c2bf0ee9d09b84d2489183c29726 # v12
         with:
           configPath: ./.lighthouserc.json
           uploadArtifacts: true
